[package]
name = "rip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.13"
serde = "1.0.151"
serde_json = "1.0.89"
termcolor = "1.1.3"
tokio = { version = "1.23.0", features = ["full"] }
